[package]
name = "criterion_demo"
version = "0.1.0"
authors = ["Victoria Terenina (torymur) <torymur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.1"

[[bench]]
name = "fibonacci"
harness = false

[dependencies]
