[package]
name = "into_map_derive"
version = "0.1.0"
authors = ["Victoria Terenina (torymur) <torymur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.15.22", features = ["extra-traits"]}
quote = "0.6.10"
into_map = {path="../into_map"}
